fix: sidebar fixed on mobile

--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,7 +1,14 @@
 .sidebar {
     flex: 0;
 }
-
+.sidebar-mobile{
+    display: flex;
+    position: fixed;
+    flex-direction: column;
+    margin-right: 30px;
+    z-index: 2;
+    background-color: white;
+}
 .sidebar > hr {
     height: 1px;
     border: 0;
